--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,9 +31,9 @@ jobs:
         uses: Checkmarx/kics-github-action@v1.0
         with:
           # path to file or directory to scan
-          path: $GITHUB_WORKSPACE
+          path: /
           # file path to store result in json format
-          output_path: $GITHUB_WORKSPACE
+          output_path: /
           # file path to store source internal representation in JSON format
           payload_path: # optional
           # path to directory with queries (default "./assets/queries")
