--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,18 +31,14 @@ jobs:
         uses: Checkmarx/kics-github-action@v1.0
         with:
           # path to file or directory to scan
-          path: /home/runner/work/IAC_terr_AWS
+          path: 'IAC_terr_AWS'
           # file path to store result in json format
-          output_path: /home/runner/work/IAC_terr_AWS
-          # file path to store source internal representation in JSON format
-          payload_path: # optional
-          # path to directory with queries (default "./assets/queries")
-          queries: # optional
-          # verbose scan
-          verbose: # optional
+          output_path: 'results.json'
+          
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: |
+          cat results.json
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
