--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,16 @@ jobs:
           
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: |
-          cat results.json
+        run:  |
+          content=`cat results.json`
+          # the following lines are only required for multi line json
+          content="${content//'%'/'%25'}"
+          content="${content//$'\n'/'%0A'}"
+          content="${content//$'\r'/'%0D'}"
+          # end of optional handling for multi line json
+          echo "::set-output name=packageJson::$content"
+      - run: |
+          echo "${{fromJson(steps.set_var.outputs.packageJson).version}}"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
